--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.3",
     "register-service-worker": "^1.7.1",
-    "vee-validate": "^4.7.3",
+    "vee-validate": "^4.1.11",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -21,6 +23,6 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.2.45"
+    "@vue/compiler-sfc": "~3.0.0"
   }
 }
